knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Hospital_Affiliate_Mapping__c/Hospital_Affiliate_Mapping__c.object-meta.xml
<CustomObject>
    <label>Hospital Affiliate Mapping</label>
    <nameField>
        <displayFormat>HA-{00000}</displayFormat>
        <label>Hospital Affiliate Mapping</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hospital Affiliate Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>