knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Hospital_Affiliate_Mapping__c/fields/Affiliate_Description__c.field-meta.xml
<CustomField>
    <fullName>Affiliate_Description__c</fullName>
    <label>Affiliate Description</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Healthcare System Affiliation</fullName>
            </value>
            <value>
                <fullName>Corporate Owner</fullName>
            </value>
            <value>
                <fullName>Corporate Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>