knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Hospital_Affiliate_Mapping__c/fields/Affiliate_Type__c.field-meta.xml
<CustomField>
    <fullName>Affiliate_Type__c</fullName>
    <label>Affiliate Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Affiliated</fullName>
            </value>
            <value>
                <fullName>Owned</fullName>
            </value>
            <value>
                <fullName>Managed</fullName>
            </value>
            <value>
                <fullName>Join Venture</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>