knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Hospital_Affiliate_Mapping__c/fields/Hospital_Affiliate__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Affiliate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hospital Affiliate</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Hospital Affiliate Mappings</relationshipLabel>
    <relationshipName>Hospital_Affiliate_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>