knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Hospital_Affiliate_Mapping__c/fields/Hospital_System__c.field-meta.xml
<CustomField>
    <fullName>Hospital_System__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hospital System</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Hospital Affiliate Mappings (Hospital System)</relationshipLabel>
    <relationshipName>Hospital_Affiliate_Mappings1</relationshipName>
    <type>Lookup</type>
</CustomField>